Fix pop up lesson on mobile

--- a/assets/css/learnpress.less
+++ b/assets/css/learnpress.less
@@ -775,7 +775,7 @@ body.course-has-popup {
                 margin-right: 20px;
             }
             .popup-close {
-                right: 0;
+                right: 20px;
                 &:before,
                 &:after {
                     content: '';
@@ -1842,6 +1842,16 @@ body.content-item-only {
 
 }
 
+@media (max-width: 480px) {
+    .woocommerce {
+        .checkout_coupon {
+            .form-row {
+                width: 100%;
+            }
+        }
+    }
+}
+
 @media (max-width: 400px) {
 
     .learn-press-courses {
@@ -1854,13 +1864,9 @@ body.content-item-only {
 
 }
 
-@media (max-width: 480px) {
-    .woocommerce {
-        .checkout_coupon {
-            .form-row {
-                width: 100%;
-            }
-        }
+@media (max-width: 350px) {
+    #course-curriculum-popup #popup-sidebar {
+        width: 100%;
     }
 }
 
